--- a/src/one/wwwroot/index.html
+++ b/src/one/wwwroot/index.html
@@ -1,18 +1,40 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="assets/loading.css">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
+    <link rel="manifest" href="assets/manifest.json">
+    <link rel="mask-icon" href="assets/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Grade View</title>
-    <base href="/" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/site.css" />
-    <link href="manifest.json" rel="manifest" />
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <meta name="apple-mobile-web-app-title" content="Maske one">
+    <meta name="application-name" content="Maske one">
+    <meta name="msapplication-TileColor" content="#2d89ef">
+    <meta name="theme-color" content="#ffffff">
+
+    <meta name="google-site-verification" content="pLEp2OGEddTJMwkBwmo-yS3RusexqBokhqim6VYO3EI" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145492068-1"></script>
     <script src="blazorSWRegister.js"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'UA-145492068-1');
+        window.onload = function () {document.querySelector("head > link:nth-child(1)").outerHTML = '<link rel="stylesheet" href="assets/styles.css">';};
+    </script>
+    <noscript><link rel="stylesheet" href="assets/styles.css"></noscript>
 </head>
 <body>
-    <app>Loading ...</app>
+    <app>
+        <div class='header'>
+            <img class='logo' src='assets/logo.svg'>
+        </div>
+    </app>
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
         // Single Page Apps for GitHub Pages
@@ -46,6 +68,6 @@
     <!-- End Single Page Apps for GitHub Pages -->
     <!-- Temporary polyfill for IE support -->
     <!-- <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Promise,fetch"></script> -->
-    <script src="_framework/blazor.webassembly.js"></script>
+    <script src='_framework/blazor.webassembly.js'></script>
 </body>
 </html>
