--- a/src/one/wwwroot/index.html
+++ b/src/one/wwwroot/index.html
@@ -1,73 +1,36 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="assets/loading.css">
+    <link rel="stylesheet" href="assets/project_files/loading.css">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
-    <link rel="manifest" href="assets/manifest.json">
-    <link rel="mask-icon" href="assets/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/project_files/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/project_files/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/project_files/favicon-16x16.png">
+    <link rel="manifest" href="manifest.json">
+    <link rel="mask-icon" href="assets/project_files/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/project_files/favicon.ico">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <meta name="apple-mobile-web-app-title" content="Maske one">
     <meta name="application-name" content="Maske one">
     <meta name="msapplication-TileColor" content="#2d89ef">
     <meta name="theme-color" content="#ffffff">
-
+	
+	<script>if ('serviceWorker' in navigator) { navigator.serviceWorker.register('serviceWorker.js') }</script>
     <meta name="google-site-verification" content="pLEp2OGEddTJMwkBwmo-yS3RusexqBokhqim6VYO3EI" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145492068-1"></script>
-    <script src="blazorSWRegister.js"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
         gtag('config', 'UA-145492068-1');
-        window.onload = function () {document.querySelector("head > link:nth-child(1)").outerHTML = '<link rel="stylesheet" href="assets/styles.css">';};
+        window.onload = function () { document.querySelector("head > link:nth-child(1)").outerHTML = '<link rel="stylesheet" href="assets/project_files/styling.css">';};
     </script>
-    <noscript><link rel="stylesheet" href="assets/styles.css"></noscript>
+    <noscript><link rel="stylesheet" href="assets/project_files/styling.css"></noscript>
 </head>
-<body>
-    <app>
-        <div class='header'>
-            <img class='logo' src='assets/logo.svg'>
-        </div>
-    </app>
-    <!-- Start Single Page Apps for GitHub Pages -->
-    <script type="text/javascript">
-        // Single Page Apps for GitHub Pages
-        // https://github.com/rafrex/spa-github-pages
-        // Copyright (c) 2016 Rafael Pedicini, licensed under the MIT License
-        // ----------------------------------------------------------------------
-        // This script checks to see if a redirect is present in the query string
-        // and converts it back into the correct url and adds it to the
-        // browser's history using window.history.replaceState(...),
-        // which won't cause the browser to attempt to load the new url.
-        // When the single page app is loaded further down in this file,
-        // the correct url will be waiting in the browser's history for
-        // the single page app to route accordingly.
-        (function (l) {
-            if (l.search) {
-                var q = {};
-                l.search.slice(1).split('&').forEach(function (v) {
-                    var a = v.split('=');
-                    q[a[0]] = a.slice(1).join('=').replace(/~and~/g, '&');
-                });
-                if (q.p !== undefined) {
-                    window.history.replaceState(null, null,
-                        l.pathname.slice(0, -1) + (q.p || '') +
-                        (q.q ? ('?' + q.q) : '') +
-                        l.hash
-                    );
-                }
-            }
-        }(window.location))
-    </script>
-    <!-- End Single Page Apps for GitHub Pages -->
-    <!-- Temporary polyfill for IE support -->
-    <!-- <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Promise,fetch"></script> -->
-    <script src='_framework/blazor.webassembly.js'></script>
+<body oncontextmenu="return false;">
+    <app><img class='logo' src='assets/project_files/logo.svg'></app>
+    <script src="_framework/blazor.webassembly.js"></script>
 </body>
 </html>
